--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
 RewriteRule ^(.*)$ $1.php
 
-ErrorDocument 403 /intervencoesphp/Errors/403.php
-ErrorDocument 404 /intervencoesphp/Errors/404.php
-ErrorDocument 500 /intervencoesphp/Errors/500.php
+ErrorDocument 403 /intervencoesphp/403.php
+ErrorDocument 404 /intervencoesphp/404.php
+ErrorDocument 500 /intervencoesphp/500.php
